--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,19 @@
         <title>MP1</title>
     </head>
     <body>
+
+        <!-- Section for navbar -->
+
+        <nav class="navbar">
+            <button data-target="section-dog">Dogs</button>
+            <button data-target="section-cat">Cats</button>
+        </nav>
+
+
         <p><h3>
             A website about cool animals!
         </h3></p>
-        <div>
+        <div id="section-dog" class="animal-section">
             <h1>Dogs</h1>
             <p><h3>The dog (Canis familiaris or Canis lupus familiaris) is a domesticated descendant of the gray wolf. Also called the domestic dog, it was selectively bred from a population of wolves during the Late Pleistocene by hunter-gatherers. The dog was the first species to be domesticated by humans, over 14,000 years ago and before the development of agriculture. Due to their long association with humans, dogs have gained the ability to thrive on a starch-rich diet that would be inadequate for other canids.
 
@@ -51,7 +60,7 @@ The global dog population is estimated at 700 million to 1 billion, distributed 
             test<br>
             </h3></p>
         </div>
-        <div>
+        <div id="section-cat" class="animal-section">
             <h1>Cats</h1>
             <p><h3>The cat (Felis catus), also referred to as the domestic cat or house cat, is a small domesticated carnivorous mammal. It is the only domesticated species of the family Felidae. Advances in archaeology and genetics have shown that the domestication of the cat occurred in the Near East around 7500 BC. It is commonly kept as a pet and working cat, but it also ranges freely as a feral cat, avoiding human contact. It is valued by humans for companionship and its ability to kill vermin. Its retractable claws are adapted to killing small prey species such as mice and rats. It has a strong, flexible body, quick reflexes, and sharp teeth, and its night vision and sense of smell are well developed. It is a social species, but a solitary hunter and a crepuscular predator.
 
@@ -92,6 +101,8 @@ test<br>
             test<br>
             </h3></p>
         </div>
+
+        <script src="./js/main.js"></script>
     </body>
 </html>
 
