--- a/src/index.html
+++ b/src/index.html
@@ -28,37 +28,20 @@ Dogs have been bred for desired behaviors, sensory capabilities, and physical at
 Communication in dogs includes eye gaze, facial expression, vocalization, body posture (including movements of bodies and limbs), and gustatory communication (scents, pheromones, and taste). They mark their territories by urinating on them, which is more likely when entering a new environment. Over the millennia, dogs have uniquely adapted to human behavior; this adaptation includes being able to understand and communicate with humans. As such, the human–canine bond has been a topic of frequent study, and dogs' influence on human society has given them the sobriquet of "man's best friend".
 
 The global dog population is estimated at 700 million to 1 billion, distributed around the world. The dog is the most popular pet in the United States, present in 34–40% of households. Developed countries make up approximately 20% of the global dog population, while around 75% of dogs are estimated to be from developing countries, mainly in the form of feral and community dogs. 
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
             </h3></p>
+
+            <!-- Section for carousel -->
+
+            <div class="carousel">
+                <button class="carousel-button left">&lt;</button>
+                <div class="carousel-images">
+                    <img src="./assets/carousel-1.jpg" alt="Image 1" class="active" />
+                    <img src="./assets/carousel-2.jpg" alt="Image 2" />
+                    <img src="./assets/carousel-3.jpg" alt="Image 3" />
+                </div>
+                <button class="carousel-button right">&gt;</button>
+            </div>
+
         </div>
         <div id="section-cat" class="animal-section">
             <h1>Cats</h1>
