modal and column section done

--- a/src/index.html
+++ b/src/index.html
@@ -53,36 +53,33 @@ Female domestic cats can have kittens from spring to late autumn in temperate zo
 
 Domestic cats occur across the globe, though their popularity as pets varies by region. Out of the estimated 600 million cats worldwide, 400 million reside in Asia, including 58 million pet cats in China. The United States leads in cat ownership with 73.8 million cats. In the United Kingdom, approximately 10.9 million domestic cats are kept as pets. 
 test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
-            test<br>
             </h3></p>
+
+            <!-- Section for modal + columns -->
+
+            <div class="imgmodal-container">
+                <div class="imgmodal-photo" data-desc="Kitty looking under bed">
+                    <img src="./assets/modal-1.jpg" alt="Image 1" />
+                    <span class="imgmodal-caption">click me</span>
+                </div>
+                <div class="imgmodal-photo" data-desc="Kitty washing hands">
+                    <img src="./assets/modal-2.jpg" alt="Image 2" />
+                    <span class="imgmodal-caption">click me</span>
+                </div>
+                <div class="imgmodal-photo" data-desc="Kitty on vacation">
+                    <img src="./assets/modal-3.jpg" alt="Image 3" />
+                    <span class="imgmodal-caption">click me</span>
+                </div>
+            </div>
+
+            <!-- Modal -->
+            <div id="imgmodal-modal" class="imgmodal-modal">
+                <div class="imgmodal-modal-content">
+                    <span id="imgmodal-closeBtn" class="imgmodal-close-btn">&times;</span>
+                    <p id="imgmodal-modalDesc"></p>
+                </div>
+            </div>
+
         </div>
 
         <script src="./js/main.js"></script>
