finished background and video embed

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
         <nav class="navbar">
             <button data-target="section-dog">Dogs</button>
             <button data-target="section-cat">Cats</button>
+            <button data-target="section-bird">Birds</button>
         </nav>
 
 
@@ -81,6 +82,28 @@ test<br>
             </div>
 
         </div>
+
+
+
+        <div id="section-bird" class="animal-section">
+            <h1>Birds</h1>
+            <p><h3>Birds are a group of warm-blooded vertebrates constituting the class Aves, characterized by feathers, toothless beaked jaws, the laying of hard-shelled eggs, a high metabolic rate, a four-chambered heart, and a strong yet lightweight skeleton. Birds live worldwide and range in size from the 5 cm (2 in) bee hummingbird to the 2.75 m (9 ft) ostrich. They rank as the most diverse class of tetrapod vertebrates, with approximately ten thousand living species, more than half of which are passerines, sometimes known as perching birds. Birds have wings whose development varies according to species; the only known groups without wings are the extinct moa and elephant birds. Wings, which evolved from forelimbs, gave birds the ability to fly, although further evolution has led to the loss of flight in some birds, including ratites, penguins, and diverse endemic island species of birds. The digestive and respiratory systems of birds are also uniquely adapted for flight. Some bird species of aquatic environments also have webbed feet, while others have developed specialized forms of locomotion such as diving. Birds are social, communicating with visual signals, calls, and songs, and participating in cooperative breeding and hunting. Many bird species migrate annually. Birds are oviparous, laying eggs that are fertilized through sexual reproduction. They usually have a fixed breeding season, and many build nests to hold their eggs and raise their young. Most birds have an extended period of parental care after hatching.
+            </h3></p>
+
+            <div class="video-wrapper">
+                <iframe 
+                    width="560" 
+                    height="315" 
+                    src="https://www.youtube.com/embed/ZuVcOwXLnyQ" 
+                    title="Birds Video" 
+                    frameborder="0" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+
+
+        </div>
+
 
         <script src="./js/main.js"></script>
     </body>
