--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,13 @@
     <body>
 
         <!-- Section for navbar -->
-
-        <nav class="navbar">
-            <button data-target="section-dog">Dogs</button>
-            <button data-target="section-cat">Cats</button>
-            <button data-target="section-bird">Birds</button>
-        </nav>
+        <header>
+            <nav class="navbar">
+                <button data-target="section-dog">Dogs</button>
+                <button data-target="section-cat">Cats</button>
+                <button data-target="section-bird">Birds</button>
+            </nav>
+        </header>
 
 
         <p><h3>
@@ -104,6 +105,25 @@ test<br>
 
         </div>
 
+        <footer class="site-footer">
+            <div class="footer-content">
+                <div class="social-media">
+                <a href="https://twitter.com/" target="_blank" aria-label="Twitter" rel="noopener noreferrer" class="social-link">
+                    <svg class="social-icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M23.954 4.57c-.885.39-1.83.654-2.825.775 1.014-.609 1.794-1.574 2.163-2.723-.95.568-2.005.978-3.127 1.195-.897-.959-2.178-1.559-3.594-1.559-3.179 0-5.515 3.034-4.797 6.045-4.09-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616v.061c0 2.385 1.693 4.374 3.946 4.828-.734.2-1.522.232-2.229.084.63 1.953 2.445 3.377 4.604 3.417-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.395 4.768 2.209 7.548 2.209 9.057 0 14.009-7.503 14.009-14.009 0-.21 0-.423-.015-.633.962-.695 1.8-1.562 2.462-2.549z"/></svg>
+                </a>
+                <a href="https://github.com/" target="_blank" aria-label="GitHub" rel="noopener noreferrer" class="social-link">
+                    <svg class="social-icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 0a12 12 0 00-3.793 23.399c.6.112.82-.26.82-.577v-2.234c-3.338.724-4.042-1.415-4.042-1.415-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.73.083-.73 1.205.085 1.839 1.238 1.839 1.238 1.07 1.833 2.807 1.303 3.492.996.108-.775.418-1.303.76-1.603-2.665-.303-5.467-1.334-5.467-5.931 0-1.31.468-2.381 1.236-3.221-.124-.303-.536-1.523.117-3.176 0 0 1.008-.322 3.301 1.23a11.52 11.52 0 016.003 0c2.293-1.552 3.3-1.23 3.3-1.23.653 1.653.241 2.873.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.625-5.479 5.921.43.37.823 1.102.823 2.222v3.293c0 .32.218.694.825.576A12.007 12.007 0 0012 0z"/></svg>
+                </a>
+                <a href="https://linkedin.com/" target="_blank" aria-label="LinkedIn" rel="noopener noreferrer" class="social-link">
+                    <svg class="social-icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.852 0-2.135 1.447-2.135 2.942v5.664H9.354V9h3.414v1.561h.049c.476-.901 1.637-1.852 3.37-1.852 3.602 0 4.268 2.369 4.268 5.455v6.288zM5.337 7.433a2.06 2.06 0 11.001-4.121 2.06 2.06 0 01-.001 4.121zM6.978 20.452H3.7V9h3.278v11.452zM22.225 0H1.771C.79 0 0 .774 0 1.728v20.543C0 23.226.79 24 1.771 24h20.451C23.206 24 24 23.226 24 22.271V1.728C24 .774 23.206 0 22.225 0z"/></svg>
+                </a>
+                </div>
+                <div class="footer-info">
+                <p>&copy; 2025 Cool Animals Website. All rights reserved.</p>
+                <p>Contact us: <a href="mailto:info@coolanimals.com">info@coolanimals.com</a></p>
+                </div>
+            </div>
+        </footer>
 
         <script src="./js/main.js"></script>
     </body>
