--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         <p><h3>
             A website about cool animals!
         </h3></p>
-        <div id="section-dog" class="animal-section">
+        <section id="section-dog" class="animal-section">
             <h1>Dogs</h1>
             <p><h3>The dog (Canis familiaris or Canis lupus familiaris) is a domesticated descendant of the gray wolf. Also called the domestic dog, it was selectively bred from a population of wolves during the Late Pleistocene by hunter-gatherers. The dog was the first species to be domesticated by humans, over 14,000 years ago and before the development of agriculture. Due to their long association with humans, dogs have gained the ability to thrive on a starch-rich diet that would be inadequate for other canids.
 
@@ -44,8 +44,8 @@ The global dog population is estimated at 700 million to 1 billion, distributed 
                 <button class="carousel-button right">&gt;</button>
             </div>
 
-        </div>
-        <div id="section-cat" class="animal-section">
+        </section>
+        <section id="section-cat" class="animal-section">
             <h1>Cats</h1>
             <p><h3>The cat (Felis catus), also referred to as the domestic cat or house cat, is a small domesticated carnivorous mammal. It is the only domesticated species of the family Felidae. Advances in archaeology and genetics have shown that the domestication of the cat occurred in the Near East around 7500 BC. It is commonly kept as a pet and working cat, but it also ranges freely as a feral cat, avoiding human contact. It is valued by humans for companionship and its ability to kill vermin. Its retractable claws are adapted to killing small prey species such as mice and rats. It has a strong, flexible body, quick reflexes, and sharp teeth, and its night vision and sense of smell are well developed. It is a social species, but a solitary hunter and a crepuscular predator.
 
@@ -82,11 +82,11 @@ test<br>
                 </div>
             </div>
 
-        </div>
+        </section>
 
 
 
-        <div id="section-bird" class="animal-section">
+        <section id="section-bird" class="animal-section">
             <h1>Birds</h1>
             <p><h3>Birds are a group of warm-blooded vertebrates constituting the class Aves, characterized by feathers, toothless beaked jaws, the laying of hard-shelled eggs, a high metabolic rate, a four-chambered heart, and a strong yet lightweight skeleton. Birds live worldwide and range in size from the 5 cm (2 in) bee hummingbird to the 2.75 m (9 ft) ostrich. They rank as the most diverse class of tetrapod vertebrates, with approximately ten thousand living species, more than half of which are passerines, sometimes known as perching birds. Birds have wings whose development varies according to species; the only known groups without wings are the extinct moa and elephant birds. Wings, which evolved from forelimbs, gave birds the ability to fly, although further evolution has led to the loss of flight in some birds, including ratites, penguins, and diverse endemic island species of birds. The digestive and respiratory systems of birds are also uniquely adapted for flight. Some bird species of aquatic environments also have webbed feet, while others have developed specialized forms of locomotion such as diving. Birds are social, communicating with visual signals, calls, and songs, and participating in cooperative breeding and hunting. Many bird species migrate annually. Birds are oviparous, laying eggs that are fertilized through sexual reproduction. They usually have a fixed breeding season, and many build nests to hold their eggs and raise their young. Most birds have an extended period of parental care after hatching.
             </h3></p>
@@ -103,7 +103,7 @@ test<br>
             </div>
 
 
-        </div>
+        </section>
 
         <footer class="site-footer">
             <div class="footer-content">
